# sc_controller

./: CMakeLists.txt  package.xml
launch/: control_sim.launch  estimator.launch
src/: scControllerNode.cpp
test_scripts/: testController.sh
